<!--
  ~ HARService: Activity Recognition Service
  ~ Copyright (C) 2015 agimenez
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~          http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="application_name">Activity Survey</string>
    <string name="title_settings">Configuración</string>
    <string name="title_tools">Herramientas</string>
    <string name="title_activity_feed">Mis Actividades</string>
    <string name="title_notification">Notificaciones</string>
    <string name="title_intro">Introducción al Reconocedor</string>
    <string name="title_update">Actualizar</string>
    <string name="title_config">Ajustes</string>
    <string name="title_help">Ayuda</string>

    <!-- Strings related to Settings -->
    <string name="pref_header_general">General</string>
    <string name="pref_header_data_sync">Datos &amp; sinc</string>
    <string name="pref_header_sensors">Sensores</string>

    <string name="pref_title_display_name">Cuenta de correo</string>
    <string name="pref_title_sync_settings">Sincronización</string>
    <string name="pref_title_session_duration">Intervalo de recolección</string>
    <string name="pref_title_sync_data">Sincronizar Datos</string>
    <string name="pref_title_sync_method">Sincronizar por</string>
    <string name="pref_default_display_name">Tu nombre completo</string>
    <string name="pref_default_session_duration">1</string>
    <string name="pref_default_sync_method">ALL</string>
    <string name="pref_default_age">25</string>
    <string name="pref_sum_display_name">Provee tu nombre para poder reconocerte</string>
    <string name="pref_sum_sync_data">Active sincronización de datos</string>
    <string name="pref_sum_sync_method">Elija cómo prefiere sincronizar los datos</string>
    <string name="pref_data_usage">Configurar Uso de datos</string>
    <string-array name="pref_session_duration_titles">
        <item>30 segundos</item>
        <item>1 minuto</item>
        <item>15 minutos</item>
        <item>30 minutos</item>
        <item>1 hora</item>
    </string-array>
    <string-array name="pref_session_duration_values">
        <item>0</item>
        <item>1</item>
        <item>15</item>
        <item>30</item>
        <item>60</item>
    </string-array>
    <string-array name="pref_sync_method_titles">
        <item>Cualquiera</item>
        <item>Datos moviles</item>
        <item>Por WIFI</item>
    </string-array>
    <string-array name="pref_sync_method_values">
        <item>ALL</item>
        <item>MOBILE</item>
        <item>WIFI</item>
    </string-array>
    <string-array name="pref_notification_titles">
        <item>Desactivado</item>
        <item>1 hora</item>
        <item>3 horas</item>
        <item>6 horas</item>
        <item>12 horas</item>
    </string-array>
    <string-array name="pref_notification_values">
        <item>-1</item>
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
    </string-array>

    <string name="intro_message">
         <![CDATA[

            <p>El detector de Actividades predice por el movimiento del teléfono
            la actividad física probable que estas realizando.
            <p>Presiona el botón "ENTENDIDO" para completar tus <b>datos basicos</b>
            y empezar la encuesta a medida que detecte tu actividad.</p>
            <p>1. Cuenta de Correo</p>
            <p>2. Edad</p>
            <i>
            El sensor de aceleración no consume mucha bateria, y la applicación se ejecuta de fondo
            para no interferir con tu actividad diaria. Cuando tengas que contestar la encuesta
            recibiras una notificación y enviar los datos al servidor dependiendo de tus preferencias</i>

        ]]>
    </string>

    <!-- Activity detection strings -->
    <string name="in_vehicle">En vehiculo</string>
    <string name="on_bicycle">En bicicleta</string>
    <string name="running">Corriendo</string>
    <string name="still">Quieto</string>
    <string name="tilting">Tilting</string>
    <string name="unknown">Desconocido</string>
    <string name="walking">Caminado</string>
    <string name="unidentifiable_activity">Unidentifiable activity: %1$s</string>
    <string name="connected">Servicio de actividad conectado</string>
    <string name="action_ok">Correcto</string>
    <string name="action_nook">Incorrecto</string>
    <string name="notification_title">Encuesta de Actividad</string>
    <string name="notification_text">Se ha detectado una nueva actividad!</string>
    <string name="notification_description">Toca para responder a la encuesta</string>
    <string name="pref_title_model">Modelo</string>
    <string name="pref_title_imei">Identificador</string>
    <string name="pref_title_sensor">Sensor</string>
    <string name="pref_title_age">Edad</string>
    <string name="pref_key_sensor">sensor</string>
    <string name="pref_key_model">model</string>
    <string name="pref_key_imei">imei</string>
    <string name="pref_key_name">display_name</string>
    <string name="pref_key_age">year_age</string>
    <string name="pref_key_duration">session_duration</string>
    <string name="pref_key_conn">sync_data_con</string>
    <string name="pref_key_sync">sync_data_method</string>
    <string name="rest_host"><![CDATA[
    http://ec2-52-27-63-54.us-west-2.compute.amazonaws.com:8080/
    ]]></string>
    <string name="help_url"><![CDATA[
    https://hardroidpy.github.io/
    ]]></string>
    <string name="pick_activity_title">Elija una actividad</string>
    <string name="pick_notification_title">Posponer notificaciones</string>
    <string name="pick_notification_message">Posponiendo notificaciones hasta</string>
    <string name="pick_notification_none">Notificaciones activadas</string>
    <string name="action_ready">ENTENDIDO</string>
    <string name="action_account_settings">Configurar Cuenta</string>
    <string name="disconnected">Servicio de actividad desconectado</string>
    <string name="pref_service_active">servicio_activo</string>
    <string name="pref_last_update">last_update_time</string>
    <string name="pref_notification_option">notification_option</string>
    <string name="pref_not_last_time">not_last_time</string>
    <string name="date_info_msg">Actividades a partir del %s</string>

    <string name="navigation_drawer_open">Abrir navegador</string>
    <string name="navigation_drawer_close">Cerrar navegador</string>
    <string name="anonymous">Ninguno</string>
    <string name="empty"/>
</resources>
