<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ HARService: Activity Recognition Service
  ~ Copyright (C) 2015 agimenez
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~           http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_header_general" android:key="pref_general">
        <EditTextPreference
            android:key="@string/pref_key_model"
            android:title="@string/pref_title_model"
            android:editable="false"
            android:enabled="false"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />

        <EditTextPreference
            android:key="@string/pref_key_imei"
            android:title="@string/pref_title_imei"
            android:editable="false"
            android:enabled="false"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />

        <EditTextPreference
            android:key="@string/pref_key_sensor"
            android:title="@string/pref_title_sensor"
            android:editable="false"
            android:enabled="false"
            android:inputType="textCapWords"
            android:capitalize="words"
            android:singleLine="true"
            android:maxLines="1" />

        <ListPreference
            android:key="@string/pref_key_name"
            android:title="@string/pref_title_display_name"
            android:defaultValue="@string/pref_default_display_name"
            android:contentDescription="@string/pref_sum_display_name" />

        <ListPreference
            android:key="@string/pref_key_duration"
            android:title="@string/pref_title_session_duration"
            android:entries="@array/pref_session_duration_titles"
            android:entryValues="@array/pref_session_duration_values"
            android:defaultValue="@string/pref_default_session_duration"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_header_data_sync" android:key="pref_data_sync">
        <CheckBoxPreference
            android:key="@string/pref_key_conn"
            android:title="@string/pref_title_sync_data"
            android:summary="@string/pref_sum_sync_data"
            android:defaultValue="true"/>

        <ListPreference
            android:dependency="sync_data_con"
            android:key="@string/pref_key_sync"
            android:title="@string/pref_title_sync_method"
            android:dialogTitle="@string/pref_title_sync_method"
            android:entries="@array/pref_sync_method_titles"
            android:entryValues="@array/pref_sync_method_values"
            android:defaultValue="@string/pref_default_sync_method" />

        <Preference android:title="@string/pref_data_usage">
            <intent android:action="android.settings.SETTINGS" />
        </Preference>
    </PreferenceCategory>
</PreferenceScreen>