<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ HARService: Activity Recognition Service
  ~ Copyright (C) 2015 agimenez
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~           http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <ListPreference
        android:key="@string/pref_key_name"
        android:title="@string/pref_title_display_name"
        android:contentDescription="@string/pref_sum_display_name" />

    <org.harsurvey.android.util.NumberPickerPreference
        android:key="@string/pref_key_age"
        android:title="@string/pref_title_age"/>

    <ListPreference
        android:key="@string/pref_key_duration"
        android:title="@string/pref_title_session_duration"
        android:entries="@array/pref_session_duration_titles"
        android:entryValues="@array/pref_session_duration_values"
        android:defaultValue="@string/pref_default_session_duration" />

</PreferenceScreen>