<!--
  ~ HARService: Activity Recognition Service
  ~ Copyright (C) 2015 agimenez
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~          http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <CheckBoxPreference
        android:key="sync_data_con"
        android:title="@string/pref_title_sync_data"
        android:summary="@string/pref_sum_sync_data"
        android:defaultValue="true"/>

    <ListPreference
        android:dependency="sync_data_con"
        android:key="sync_data_method"
        android:title="@string/pref_title_sync_method"
        android:dialogTitle="@string/pref_title_sync_method"
        android:entries="@array/pref_sync_method_titles"
        android:entryValues="@array/pref_sync_method_values"
        android:defaultValue="@string/pref_default_sync_method" />

    <Preference android:title="@string/pref_data_usage">
        <intent android:action="android.settings.SETTINGS" />
    </Preference>

</PreferenceScreen>
